update - release-act & withstand-pain

--- a/src/scss/dialog/mystic-act-dialog.scss
+++ b/src/scss/dialog/mystic-act-dialog.scss
@@ -45,6 +45,19 @@
       color: $white;
       font-weight: 600;
     }
+
+    .zeon {
+      flex: 1 1 0;
+    }
+
+
+    .preparedSpells {
+      flex: 1.5 1 0;
+    }
+
+    .release {
+      flex: 1 1 0;
+    }
   }
 
   .group-body {
@@ -52,24 +65,43 @@
 
     height: 100%;
 
-    .full-act,
-    .partial-act {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
 
-      margin-top: 2rem;
+    .prepared-spell-row:first-child {
+      margin-top: 0;
+    }
 
-      .label {
-        font-size: 1.5rem;
-        font-weight: bold;
-        text-align: center;
+    .prepared-spell-row {
+      margin-top: 0.75rem;
+
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+      grid-column-gap: 0.1rem;
+
+      .name .input-container {
+        width: 100%;
       }
     }
 
     .act-buttons {
       display: flex;
+
+      .full-act,
+      .partial-act,
+      .release-act,
+      .withstand-pain {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        margin-top: 2rem;
+
+        .label {
+          font-size: 1.5rem;
+          font-weight: bold;
+          text-align: center;
+        }
+      }
     }
 
     .columns {
