--- a/src/templates/actor/parts/general/parts/presence.hbs
+++ b/src/templates/actor/parts/general/parts/presence.hbs
@@ -14,6 +14,15 @@
       title=(localize "anima.ui.general.presence.title")
       inputName="system.general.presence.base.value"
       inputValue=system.general.presence.base.value
+      rollable=true
+      rollableDice='1d100'
+      rollableMessage=(localize "anima.ui.general.presence.title")
+      hasSecondaryInput=true
+      rollSecondaryInput=true
+      addTooltips=true
+      disableSecondaryInput=true
+      secondaryInputName="system.general.presence.final.value"
+      secondaryInputValue=system.general.presence.final.value
     }}
   {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
 {{/"systems/animabf/templates/common/ui/group.hbs"}}
