--- a/src/templates/actor/parts/header/parts/resistances.hbs
+++ b/src/templates/actor/parts/header/parts/resistances.hbs
@@ -18,11 +18,11 @@
         rollableMessage=(localize (concat 'anima.ui.resistances.' key))
         inputName=(concat "system.characteristics.secondaries.resistances." key ".base.value")
         inputValue=atr.base.value
-        hasSecondaryInput=false
+        hasSecondaryInput=true
         rollSecondaryInput=true
         addTooltips=true
         disableSecondaryInput=true
-        secondaryInputName=(concat "system.characteristics.secondaries.resistances." key ".base.value")
+        secondaryInputName=(concat "system.characteristics.secondaries.resistances." key ".final.value")
         secondaryInputValue=atr.final.value
       }}
     {{/each}}
