--- a/src/templates/actor/parts/mystic/mystic.hbs
+++ b/src/templates/actor/parts/mystic/mystic.hbs
@@ -23,6 +23,7 @@
         </div>
         <div class='second-column'>
           {{> "systems/animabf/templates/actor/parts/mystic/parts/spell-maintenances.hbs"}}
+          {{> "systems/animabf/templates/actor/parts/mystic/parts/maintained-spells.hbs"}}
           {{> "systems/animabf/templates/actor/parts/mystic/parts/selected-spells.hbs"}}
           {{> "systems/animabf/templates/actor/parts/mystic/parts/summons.hbs"}}
           {{> "systems/animabf/templates/actor/parts/mystic/parts/metamagics.hbs"}}
