--- a/src/templates/actor/parts/mystic/parts/zeon.hbs
+++ b/src/templates/actor/parts/mystic/parts/zeon.hbs
@@ -30,8 +30,13 @@
     "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
       class="zeonMaintained"
       title=(localize "anima.ui.mystic.zeonMaintained.title")
-      inputName="system.mystic.zeonMaintained.value"
-      inputValue=system.mystic.zeonMaintained.value
+      inputName="system.mystic.zeonMaintained.base.value"
+      inputValue=system.mystic.zeonMaintained.base.value
+      hasSecondaryInput=true
+      disableSecondaryInput=true
+      addTooltips=true
+      secondaryInputName="system.mystic.zeonMaintained.final.value"
+      secondaryInputValue=system.mystic.zeonMaintained.final.value
     }}
   {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
 {{/"systems/animabf/templates/common/ui/group.hbs"}}
