fix - mystic spheres hbs data/system

--- a/src/templates/actor/parts/mystic/parts/spheres.hbs
+++ b/src/templates/actor/parts/mystic/parts/spheres.hbs
@@ -12,61 +12,61 @@
       <p class='label sphere-name'>
         {{localize "anima.ui.mystic.magicLevel.spheres.water.title"}}
       </p>
-      <input name='data.mystic.magicLevel.spheres.water.value' class='sphere-value' type='number' value='{{system.mystic.magicLevel.spheres.water.value}}'/>
+      <input name='system.mystic.magicLevel.spheres.water.value' class='sphere-value' type='number' value='{{system.mystic.magicLevel.spheres.water.value}}'/>
     </div>
     <div class='earth-sphere sphere'>
       <p class='label sphere-name'>
         {{localize "anima.ui.mystic.magicLevel.spheres.earth.title"}}
       </p>
-      <input name='data.mystic.magicLevel.spheres.earth.value' class='sphere-value' type='number' value='{{system.mystic.magicLevel.spheres.earth.value}}'/>
+      <input name='system.mystic.magicLevel.spheres.earth.value' class='sphere-value' type='number' value='{{system.mystic.magicLevel.spheres.earth.value}}'/>
     </div>
     <div class='creation-sphere sphere'>
       <p class='label sphere-name'>
         {{localize "anima.ui.mystic.magicLevel.spheres.creation.title"}}
       </p>
-      <input name='data.mystic.magicLevel.spheres.creation.value' class='sphere-value' type='number' value='{{system.mystic.magicLevel.spheres.creation.value}}'/>
+      <input name='system.mystic.magicLevel.spheres.creation.value' class='sphere-value' type='number' value='{{system.mystic.magicLevel.spheres.creation.value}}'/>
     </div>
     <div class='darkness-sphere sphere'>
       <p class='label sphere-name'>
         {{localize "anima.ui.mystic.magicLevel.spheres.darkness.title"}}
       </p>
-      <input name='data.mystic.magicLevel.spheres.darkness.value' class='sphere-value' type='number' value='{{system.mystic.magicLevel.spheres.darkness.value}}'/>
+      <input name='system.mystic.magicLevel.spheres.darkness.value' class='sphere-value' type='number' value='{{system.mystic.magicLevel.spheres.darkness.value}}'/>
     </div>
     <div class='necromancy-sphere sphere'>
       <p class='label sphere-name'>
         {{localize "anima.ui.mystic.magicLevel.spheres.necromancy.title"}}
       </p>
-      <input name='data.mystic.magicLevel.spheres.necromancy.value' class='sphere-value' type='number' value='{{system.mystic.magicLevel.spheres.necromancy.value}}'/>
+      <input name='system.mystic.magicLevel.spheres.necromancy.value' class='sphere-value' type='number' value='{{system.mystic.magicLevel.spheres.necromancy.value}}'/>
     </div>
     <div class='light-sphere sphere'>
       <p class='label sphere-name'>
         {{localize "anima.ui.mystic.magicLevel.spheres.light.title"}}
       </p>
-      <input name='data.mystic.magicLevel.spheres.light.value' class='sphere-value' type='number' value='{{system.mystic.magicLevel.spheres.light.value}}'/>
+      <input name='system.mystic.magicLevel.spheres.light.value' class='sphere-value' type='number' value='{{system.mystic.magicLevel.spheres.light.value}}'/>
     </div>
     <div class='destruction-sphere sphere'>
       <p class='label sphere-name'>
         {{localize "anima.ui.mystic.magicLevel.spheres.destruction.title"}}
       </p>
-      <input name='data.mystic.magicLevel.spheres.destruction.value' class='sphere-value' type='number' value='{{system.mystic.magicLevel.spheres.destruction.value}}'/>
+      <input name='system.mystic.magicLevel.spheres.destruction.value' class='sphere-value' type='number' value='{{system.mystic.magicLevel.spheres.destruction.value}}'/>
     </div>
     <div class='air-sphere sphere'>
       <p class='label sphere-name'>
         {{localize "anima.ui.mystic.magicLevel.spheres.air.title"}}
       </p>
-      <input name='data.mystic.magicLevel.spheres.air.value' class='sphere-value' type='number' value='{{system.mystic.magicLevel.spheres.air.value}}'/>
+      <input name='system.mystic.magicLevel.spheres.air.value' class='sphere-value' type='number' value='{{system.mystic.magicLevel.spheres.air.value}}'/>
     </div>
     <div class='fire-sphere sphere'>
       <p class='label sphere-name'>
         {{localize "anima.ui.mystic.magicLevel.spheres.fire.title"}}
       </p>
-      <input name='data.mystic.magicLevel.spheres.fire.value' class='sphere-value' type='number' value='{{system.mystic.magicLevel.spheres.fire.value}}'/>
+      <input name='system.mystic.magicLevel.spheres.fire.value' class='sphere-value' type='number' value='{{system.mystic.magicLevel.spheres.fire.value}}'/>
     </div>
     <div class='illusion-sphere sphere'>
       <p class='label sphere-name'>
         {{localize "anima.ui.mystic.magicLevel.spheres.illusion.title"}}
       </p>
-      <input name='data.mystic.magicLevel.spheres.illusion.value' class='sphere-value' type='number' value='{{system.mystic.magicLevel.spheres.illusion.value}}'/>
+      <input name='system.mystic.magicLevel.spheres.illusion.value' class='sphere-value' type='number' value='{{system.mystic.magicLevel.spheres.illusion.value}}'/>
     </div>
     {{>
     "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
