update - itemSheet power and spell

--- a/src/scss/items/spell/spell.scss
+++ b/src/scss/items/spell/spell.scss
@@ -44,7 +44,29 @@
         display: flex;
         justify-content: space-between;
 
-        .level,
+        .level {
+          .input {
+            height: 1.5rem;
+          }
+
+          .input-container {
+            width: 2.5rem;
+          }
+        }
+
+        .visible {
+          .input-container {
+            width: 1rem;
+          }
+        }
+
+        .combat-type {
+          .input {
+            height: 1.5rem;
+            padding: 0.15rem 0.5rem;
+          }
+        }
+
         .via {
           .input {
             height: 1.5rem;
@@ -54,12 +76,6 @@
 
         .via .input-container {
           width: 8rem;
-        }
-
-        .visible {
-          .input-container {
-            width: 1rem;
-          }
         }
       }
     }
@@ -100,6 +116,16 @@
       }
     }
 
+    .macro {
+      .label {
+        min-width: 4.5rem;
+      }
+
+      .input-container {
+        width: 100%;
+      }
+    }
+
     .description {
       display: flex;
       justify-content: start;
@@ -108,6 +134,7 @@
         align-self: flex-start;
         padding-right: 0.5rem;
       }
+
       .editor {
         @include input;
 
@@ -133,6 +160,7 @@
         height: 1.5rem;
         padding: 0.15rem 0.5rem;
       }
+
       .has-daily-maintenance {
         .input-container {
           width: 1rem;
