--- a/src/scss/items/psychic-power/psychic-power.scss
+++ b/src/scss/items/psychic-power/psychic-power.scss
@@ -53,24 +53,35 @@
         }
       }
 
+      .macro {
+        .label {
+          min-width: 2.8rem;
+        }
+
+        .input-container {
+          width: 100%;
+        }
+      }
+
       .description {
         display: flex;
         justify-content: start;
         padding-top: 0.5rem;
-  
+
         .label {
           align-self: flex-start;
           padding-right: 0.5rem;
           font-weight: bold;
         }
+
         .editor {
           @include input;
-  
+
           font-weight: inherit;
-  
+
           height: 6rem;
           width: 100%;
-  
+
           margin-top: 0;
           border-radius: 0.5rem;
         }
@@ -99,17 +110,21 @@
           .action-type {
             .input {
               height: 1.5rem;
+              padding: 0.15rem 0.5rem;
             }
           }
+
+          .combat-type {
+            .input {
+              height: 1.5rem;
+              padding: 0.15rem 0.5rem;
+            }
+          }
+
           .discipline {
             .input {
               height: 1.5rem;
-            }
-          }
-          .macro {
-            .input {
-              height: 1.5rem;
-              width: 8rem;
+              padding: 0.15rem 0.5rem;
             }
           }
         }
@@ -125,6 +140,12 @@
 
         .input {
           height: 1.5rem;
+        }
+        .critic{
+          .input {
+            height: 1.5rem;
+            padding: 0.15rem 0.5rem;
+          }
         }
       }
     }
