--- a/src/templates/actor/parts/general/general.hbs
+++ b/src/templates/actor/parts/general/general.hbs
@@ -15,7 +15,10 @@
           {{> "systems/animabf/templates/actor/parts/general/parts/destiny-points.hbs"}}
           {{> "systems/animabf/templates/actor/parts/general/parts/aspect.hbs"}}
         </div>
+        <div>
         {{> "systems/animabf/templates/actor/parts/general/parts/description.hbs"}}
+        {{> "systems/animabf/templates/actor/parts/general/parts/body.hbs"}}
+        </div>
       </div>
     </div>
 
