--- a/src/templates/dialog/combat/combat-attack/parts/combat.hbs
+++ b/src/templates/dialog/combat/combat-attack/parts/combat.hbs
@@ -90,8 +90,9 @@
   disabled=this.attackSent
   inputName='attacker.combat.specificAttack.targeted'
 }}
+  <option {{#if (is "eq" ../this.attacker.combat.specificAttack.targeted 'none')}}selected{{/if}} value='none'>{{localize (concat 'macros.combat.dialog.targetedAttack.none.title')}}</option>
   {{#each this.attacker.targetedAttacks}}
-    <option {{#if (is "eq" ../this.attacker.combat.specificAttack.targeted this.bodyPart)}}selected{{/if}} value='{{this.bodyPart}}'>{{localize (concat 'macros.combat.dialog.targetedAttack.' this.bodyPart '.title')}}</option>
+    <option {{#if (is "eq" ../this.attacker.combat.specificAttack.targeted @key)}}selected{{/if}} value='{{@key}}'>{{localize (concat 'macros.combat.dialog.targetedAttack.' @key '.title')}}</option>
   {{/each}}
 {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
 {{/if}}
@@ -102,9 +103,12 @@
   disabled=this.attackSent
   inputName='attacker.combat.specificAttack.targeted'
 }}
-  {{#each_when this.attacker.targetedAttacks "bodyPart" "" "" "none|elbow|foot|hand|knee|arm|thigh|calf|wrist"}}
-    <option {{#if (is "eq" ../this.attacker.combat.specificAttack.targeted this.bodyPart)}}selected{{/if}} value='{{this.bodyPart}}'>{{localize (concat 'macros.combat.dialog.targetedAttack.' this.bodyPart '.title')}}</option>
-  {{/each_when}}
+  <option {{#if (is "eq" ../this.attacker.combat.specificAttack.targeted 'none')}}selected{{/if}} value='none'>{{localize (concat 'macros.combat.dialog.targetedAttack.none.title')}}</option>
+  {{#each this.attacker.targetedAttacks}}
+    {{#if (or (is 'eq' @key 'elbow') (is 'eq' @key 'foot') (is 'eq' @key 'hand') (is 'eq' @key 'knee') (is 'eq' @key 'arm') (is 'eq' @key 'thigh') (is 'eq' @key 'calf') (is 'eq' @key 'wrist'))}}
+      <option {{#if (is "eq" ../this.attacker.combat.specificAttack.targeted @key)}}selected{{/if}} value='{{@key}}'>{{localize (concat 'macros.combat.dialog.targetedAttack.' @key '.title')}}</option>
+    {{/if}}
+  {{/each}}
 {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
 {{/if}}
 
