--- a/src/templates/dialog/combat/gm-combat-dialog.hbs
+++ b/src/templates/dialog/combat/gm-combat-dialog.hbs
@@ -497,24 +497,23 @@
               inputValue=this.calculations.damage
             }}
           {{/if}}
-          {{#if this.roll.resistanceRoll.sent}}
-            {{#if (is 'gt' this.roll.resistanceRoll.value 0)}}
-              {{>
-              "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
-                class="resistance-roll"
-                title=(localize 'macros.combat.dialog.resistanceRoll.title')
-                disabled=true
-                inputValue=this.roll.resistanceRoll.value
-              }}
-            {{else}}
-              {{>
-              "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
-                class="resistance-roll"
-                title=(localize 'macros.combat.dialog.resistanceRoll.title')
-                disabled=true
-                inputValue=this.roll.criticRoll.resist
-              }}
-            {{/if}}
+          {{#if (is 'gt' this.roll.resistanceRoll.value 0)}}
+            {{>
+            "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
+              class="resistance-roll"
+              title=(localize 'macros.combat.dialog.resistanceRoll.title')
+              disabled=true
+              inputValue=this.roll.resistanceRoll.value
+            }}
+          {{/if}}
+          {{#if (is 'gt' this.roll.criticRoll.resist 0)}}
+            {{>
+            "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
+              class="resistance-roll"
+              title=(localize 'macros.combat.dialog.resistCriticRoll.title')
+              disabled=true
+              inputValue=this.roll.criticRoll.resist
+            }}
           {{/if}}
           {{#if (is 'gt' this.roll.oppousedCheckRoll.defender.value 0)}}
             {{>
