--- a/src/templates/dialog/combat/combat-attack/parts/mystic.hbs
+++ b/src/templates/dialog/combat/combat-attack/parts/mystic.hbs
@@ -36,10 +36,9 @@
   disabled=this.attackSent
   inputName='attacker.mystic.spellGrade'
 }}
-  <option {{#if (is "eq" this.attacker.mystic.spellGrade 'base')}}selected{{/if}} value='base'>{{localize 'macros.combat.dialog.spellGrade.base.title'}}</option>
-  <option {{#if (is "eq" this.attacker.mystic.spellGrade 'intermediate')}}selected{{/if}} value='intermediate'>{{localize 'macros.combat.dialog.spellGrade.intermediate.title'}}</option>
-  <option {{#if (is "eq" this.attacker.mystic.spellGrade 'advanced')}}selected{{/if}} value='advanced'>{{localize 'macros.combat.dialog.spellGrade.advanced.title'}}</option>
-  <option {{#if (is "eq" this.attacker.mystic.spellGrade 'arcane')}}selected{{/if}} value='arcane'>{{localize 'macros.combat.dialog.spellGrade.arcane.title'}}</option>
+{{#each this.attacker.mystic.attainableSpellGrades}}
+  <option {{#if (is "eq" ../this.attacker.mystic.spellGrade this)}}selected{{/if}} value='{{this}}'>{{localize (concat 'macros.combat.dialog.spellGrade.' this '.title')}}</option>
+{{/each}}
 {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
 
 {{> 'systems/animabf/templates/common/ui/custom-select-choices.hbs'
