--- a/src/templates/dialog/combat/combat-defense/parts/mystic.hbs
+++ b/src/templates/dialog/combat/combat-defense/parts/mystic.hbs
@@ -39,10 +39,9 @@
   disabled=this.defenseSent
   inputName='defender.mystic.spellGrade'
 }}
-  <option {{#if (is "eq" this.defender.mystic.spellGrade 'base')}}selected{{/if}} value='base'>{{localize 'macros.combat.dialog.spellGrade.base.title'}}</option>
-  <option {{#if (is "eq" this.defender.mystic.spellGrade 'intermediate')}}selected{{/if}} value='intermediate'>{{localize 'macros.combat.dialog.spellGrade.intermediate.title'}}</option>
-  <option {{#if (is "eq" this.defender.mystic.spellGrade 'advanced')}}selected{{/if}} value='advanced'>{{localize 'macros.combat.dialog.spellGrade.advanced.title'}}</option>
-  <option {{#if (is "eq" this.defender.mystic.spellGrade 'arcane')}}selected{{/if}} value='arcane'>{{localize 'macros.combat.dialog.spellGrade.arcane.title'}}</option>
+{{#each this.defender.mystic.attainableSpellGrades}}
+  <option {{#if (is "eq" ../this.defender.mystic.spellGrade this)}}selected{{/if}} value='{{this}}'>{{localize (concat 'macros.combat.dialog.spellGrade.' this '.title')}}</option>
+{{/each}}
 {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
 
   {{#if (and this.defender.mystic.spellCasting.canCast.innate (is 'eq' this.defender.mystic.spellCasting.override false))}}
