--- a/src/templates/actor/parts/mystic/mystic.hbs
+++ b/src/templates/actor/parts/mystic/mystic.hbs
@@ -14,6 +14,7 @@
               {{> "systems/animabf/templates/actor/parts/mystic/parts/magic-projection.hbs"}}
               {{> "systems/animabf/templates/actor/parts/mystic/parts/zeon-regeneration.hbs"}}
               {{> "systems/animabf/templates/actor/parts/mystic/parts/zeon.hbs"}}
+              {{> "systems/animabf/templates/actor/parts/mystic/parts/mystic-settings.hbs"}}
             </div>
             <div>
               {{> "systems/animabf/templates/actor/parts/mystic/parts/summoning.hbs"}}
