--- a/src/templates/actor/parts/mystic/parts/zeon.hbs
+++ b/src/templates/actor/parts/mystic/parts/zeon.hbs
@@ -23,8 +23,8 @@
     "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
       class="accumulated"
       title=(localize "anima.ui.mystic.zeon.accumulated.title")
-      inputName="system.mystic.zeon.accumulated.value"
-      inputValue=system.mystic.zeon.accumulated.value
+      inputName="system.mystic.zeon.accumulated"
+      inputValue=system.mystic.zeon.accumulated
     }}
     {{>
     "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
