--- a/src/templates/dialog/combat/combat-attack/parts/mystic.hbs
+++ b/src/templates/dialog/combat/combat-attack/parts/mystic.hbs
@@ -20,7 +20,21 @@
   inputName='attacker.mystic.magicProjection.final'
   inputValue=this.attacker.mystic.magicProjection.final
 }}
-
+{{#if (is "gt" this.attacker.actor.system.mystic.magicLevel.metamagics.arcaneWarfare.offensiveExpertise.sphere 0)}}
+  {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
+    title=(localize 'anima.ui.mystic.metamagics.offensiveExpertise.title')
+    disabled=this.attackSent
+    inputName='attacker.mystic.metamagics.offensiveExpertise'
+  }}
+    <option {{#if (is "eq" ../this.attacker.mystic.metamagics.offensiveExpertise 0)}}selected{{/if}} value='0'>0</option>
+    <option {{#if (is "eq" ../this.attacker.mystic.metamagics.offensiveExpertise 10)}}selected{{/if}} value='10'>10</option>
+    <option {{#if (is "eq" ../this.attacker.mystic.metamagics.offensiveExpertise 20)}}selected{{/if}} value='20'>20</option>
+    {{#if (is "gt" ../this.attacker.actor.system.mystic.magicLevel.metamagics.arcaneWarfare.offensiveExpertise.sphere 1)}}<option {{#if (is "eq" ../this.attacker.mystic.metamagics.offensiveExpertise 30)}}selected{{/if}} value='30'>30</option>{{/if}}
+    {{#if (is "gt" ../this.attacker.actor.system.mystic.magicLevel.metamagics.arcaneWarfare.offensiveExpertise.sphere 1)}}<option {{#if (is "eq" ../this.attacker.mystic.metamagics.offensiveExpertise 40)}}selected{{/if}} value='40'>40</option>{{/if}}
+    {{#if (is "gt" ../this.attacker.actor.system.mystic.magicLevel.metamagics.arcaneWarfare.offensiveExpertise.sphere 2)}}<option {{#if (is "eq" ../this.attacker.mystic.metamagics.offensiveExpertise 50)}}selected{{/if}} value='50'>50</option>{{/if}}
+    {{#if (is "gt" ../this.attacker.actor.system.mystic.magicLevel.metamagics.arcaneWarfare.offensiveExpertise.sphere 2)}}<option {{#if (is "eq" ../this.attacker.mystic.metamagics.offensiveExpertise 60)}}selected{{/if}} value='60'>60</option>{{/if}}
+  {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
+{{/if}}
 {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
   title=(localize 'macros.combat.dialog.spell.title')
   disabled=this.attackSent
