--- a/src/templates/dialog/combat/combat-defense/parts/mystic.hbs
+++ b/src/templates/dialog/combat/combat-defense/parts/mystic.hbs
@@ -24,6 +24,21 @@
 }}
 
 {{#if this.defender.mystic.supernaturalShield.newShield}}
+  {{#if (is "gt" this.defender.actor.system.mystic.magicLevel.metamagics.arcaneWarfare.defensiveExpertise.sphere 0)}}
+    {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
+      title=(localize 'anima.ui.mystic.metamagics.defensiveExpertise.title')
+      disabled=this.defenseSent
+      inputName='defender.mystic.metamagics.defensiveExpertise'
+    }}
+      <option {{#if (is "eq" ../this.defender.mystic.metamagics.defensiveExpertise 0)}}selected{{/if}} value='0'>0</option>
+      <option {{#if (is "eq" ../this.defender.mystic.metamagics.defensiveExpertise 10)}}selected{{/if}} value='10'>10</option>
+      <option {{#if (is "eq" ../this.defender.mystic.metamagics.defensiveExpertise 20)}}selected{{/if}} value='20'>20</option>
+      {{#if (is "gt" ../this.defender.actor.system.mystic.magicLevel.metamagics.arcaneWarfare.defensiveExpertise.sphere 1)}}<option {{#if (is "eq" ../this.defender.mystic.metamagics.defensiveExpertise 30)}}selected{{/if}} value='30'>30</option>{{/if}}
+      {{#if (is "gt" ../this.defender.actor.system.mystic.magicLevel.metamagics.arcaneWarfare.defensiveExpertise.sphere 1)}}<option {{#if (is "eq" ../this.defender.mystic.metamagics.defensiveExpertise 40)}}selected{{/if}} value='40'>40</option>{{/if}}
+      {{#if (is "gt" ../this.defender.actor.system.mystic.magicLevel.metamagics.arcaneWarfare.defensiveExpertise.sphere 2)}}<option {{#if (is "eq" ../this.defender.mystic.metamagics.defensiveExpertise 50)}}selected{{/if}} value='50'>50</option>{{/if}}
+      {{#if (is "gt" ../this.defender.actor.system.mystic.magicLevel.metamagics.arcaneWarfare.defensiveExpertise.sphere 2)}}<option {{#if (is "eq" ../this.defender.mystic.metamagics.defensiveExpertise 60)}}selected{{/if}} value='60'>60</option>{{/if}}
+    {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
+  {{/if}}
 {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
   title=(localize 'macros.combat.dialog.spell.title')
   disabled=this.defenseSent
