new - item poison

--- a/src/scss/items/items-sheet.scss
+++ b/src/scss/items/items-sheet.scss
@@ -3,6 +3,7 @@
 @import './weapon/weapon.scss';
 @import './ammo/ammo.scss';
 @import './armor/armor.scss';
+@import './poison/poison.scss';
 @import './spell/spell.scss';
 @import './psychic-power/psychic-power.scss';
 @import './technique/technique.scss';
