--- a/src/templates/actor/parts/combat/combat.hbs
+++ b/src/templates/actor/parts/combat/combat.hbs
@@ -2,6 +2,7 @@
     <div class="first-row">
          {{> "systems/animabf/templates/actor/parts/combat/parts/base-values.hbs"}}
          {{> "systems/animabf/templates/actor/parts/combat/parts/ammo.hbs"}}
+         {{> "systems/animabf/templates/actor/parts/combat/parts/poisons.hbs"}}
     </div>
     <div class='second-row'>
       {{> "systems/animabf/templates/actor/parts/combat/parts/weapons.hbs"}}
