--- a/src/scss/actor/parts/combat.scss
+++ b/src/scss/actor/parts/combat.scss
@@ -5,6 +5,10 @@
     display: grid;
     grid-template-columns: 1fr 3fr;
     grid-column-gap: 1rem;
+
+    .base-values {
+      grid-row: span 2;
+    }
   }
 
   .second-row,
@@ -30,11 +34,13 @@
       .name .input-container {
         width: 100%;
       }
+
       .origin .input-container {
         width: 100%;
       }
     }
   }
+
   // Supernatural Shields
 
   .combat-special-skills {
@@ -59,6 +65,7 @@
     .input {
       @include input;
     }
+
     .combat-table-row:first-child {
       margin-top: 0;
     }
@@ -74,7 +81,7 @@
     }
 
     .group-body {
-      max-height: 10.2rem;
+      max-height: 5.6rem;
       overflow: hidden;
       overflow-y: scroll;
     }
@@ -93,8 +100,37 @@
     }
   }
 
+  .poisons {
+    margin-top: 0.3rem;
+    justify-content: flex-end;
+
+    .poison-row:first-child {
+      margin-top: 0;
+    }
+
+    .group-body {
+      max-height: 7.7rem;
+      overflow: hidden;
+      overflow-y: scroll;
+    }
+
+    .poison-row {
+      margin-top: 0.5rem;
+
+      .name {
+        .input-container {
+          min-width: 10rem;
+        }
+      }
+
+      display: flex;
+      justify-content: space-between;
+    }
+  }
+
   .weapons {
     margin-top: 0.75rem;
+    width: 100%;
 
     .weapon-row:first-child {
       margin-top: 0;
@@ -163,6 +199,10 @@
           .input {
             height: 1.5rem;
           }
+
+          .input-container.big {
+            width: 5.5rem;
+          }
         }
       }
     }
@@ -170,6 +210,7 @@
 
   .armors {
     margin-top: 0.75rem;
+    width: 100%;
 
     .armor-row:first-child {
       margin-top: 0;
