update - poison amount

--- a/src/scss/actor/parts/combat.scss
+++ b/src/scss/actor/parts/combat.scss
@@ -123,6 +123,12 @@
         }
       }
 
+      .amount {
+        .input-container {
+          width: 3.5rem;
+        }
+      }
+
       display: flex;
       justify-content: space-between;
     }
