--- a/src/templates/items/poison/poison.hbs
+++ b/src/templates/items/poison/poison.hbs
@@ -78,6 +78,13 @@
         inputName="system.transmission"
         inputValue=system.transmission
       }}
+      {{>
+      "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
+        class="amount"
+        title=(localize "anima.ui.combat.poisons.amount.title")
+        inputName="system.amount"
+        inputValue=system.amount
+      }}
     {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
   {{/"systems/animabf/templates/common/ui/group.hbs"}}
 {{/"systems/animabf/templates/items/base/base-sheet.hbs"}}
